# SystemMonitor

./: CMakeLists.txt  Makefile  README.md
include/: format.h  linux_parser.h  process.h  processor.h
src/: format.cpp  linux_parser.cpp  process.cpp  processor.cpp  system.cpp
test/: test.cpp
